cert-k8s-ckad/4_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        type: test
    spec:
      containers:
      - name: name1
        image: nginx
        ports:
          - containerPort: 80
            name: http-web-svc
  selector:
    matchLabels:
      type: test
