cert-k8s-ckad/9_secret.yml

apiVersion: v1
kind: Pod
metadata:
  name: secret-test-app
  labels:
    name: secret-test-app
spec:
  containers:
  - name: secret-test-app
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
