cert-k8s-ckad/7_service.yml
kind: Service
apiVersion: v1
metadata:
  name:  test
spec:
  selector:
    app:  mywebapp
  type:  ClusterIP
  ports:
  - name:  web
    port:  80
    targetPort:  8080
