cert-k8s-ckad/15_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: cluster.demo
    http:
      paths:
      - path: /test123(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myservice1
            port:
              number: 80      
  ingressClassName: nginx
